syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.melli.wallet.grpc";
option java_outer_classname = "CashOutProto";

package wallet;

import "base.proto";
import "cash_in_service.proto";

// Cash Out Service
service CashOutService {
  rpc GenerateUuid(CashGenerateUuidRequestGrpc) returns (BaseResponseGrpc) {}
  rpc Withdraw(CashOutWalletRequestGrpc) returns (BaseResponseGrpc) {}
  rpc InquiryCashOut(InquiryCashOutRequestGrpc) returns (BaseResponseGrpc) {}
}

// Request Messages
message CashOutWalletRequestGrpc {
  string unique_identifier = 1;
  string amount = 2;
  string iban = 3;
  string national_code = 4;
  string additional_data = 5;
  string account_number = 6;
  string sign = 7;
  string merchantId = 8;
}

message InquiryCashOutRequestGrpc {
  string unique_identifier = 1;
}
